[gd_scene load_steps=12 format=3 uid="uid://yogv430pp5pf"]

[ext_resource type="Texture2D" uid="uid://bhe7qip1ptf5j" path="res://characters/character_textures/sibling1_spritesheet.png" id="1_3w5or"]
[ext_resource type="Script" path="res://characters/character_scenes/inside_truck_sibling_1.gd" id="1_84oi0"]
[ext_resource type="Texture2D" uid="uid://8omvucxltksf" path="res://characters/character_textures/sibling1_spritesheet_update.png" id="2_adnle"]
[ext_resource type="Shader" path="res://materials/inside_truck/inside_truck_sibling1.gdshader" id="2_ewca1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lxdwi"]
shader = ExtResource("2_ewca1")
shader_parameter/line_color = Color(1, 1, 0, 1)
shader_parameter/line_thickness = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_j88r3"]
atlas = ExtResource("2_adnle")
region = Rect2(1245, 0, 1245, 1161)

[sub_resource type="AtlasTexture" id="AtlasTexture_eev23"]
atlas = ExtResource("2_adnle")
region = Rect2(0, 0, 1245, 1161)

[sub_resource type="AtlasTexture" id="AtlasTexture_f76ce"]
atlas = ExtResource("1_3w5or")
region = Rect2(0, 0, 728, 726)

[sub_resource type="SpriteFrames" id="SpriteFrames_1dcwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j88r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eev23")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f76ce")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_twcjl"]
radius = 33.0146

[sub_resource type="CircleShape2D" id="CircleShape2D_jtt5k"]
radius = 99.0454

[node name="sibling1" type="CharacterBody2D"]
script = ExtResource("1_84oi0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_lxdwi")
position = Vector2(0, 5.96046e-08)
scale = Vector2(0.115155, 0.117605)
sprite_frames = SubResource("SpriteFrames_1dcwi")
animation = &"idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 11)
scale = Vector2(1, 1.01934)
shape = SubResource("CircleShape2D_twcjl")

[node name="chatDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chatDetection"]
shape = SubResource("CircleShape2D_jtt5k")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="chatDetection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="chatDetection" to="." method="_on_chat_detection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
